[project]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = ""
authors = [
    {name = "MaxymBeregovoi",email = "108676512+maksberegovoi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
